--- a/Notes/todo.txt
+++ b/Notes/todo.txt
@@ -1,10 +1,4 @@
-- start a week or two back from the initial case y0=1
-	- start with the actual case number if you're doing it automatically
-
-- add a degree of freedom with b_P, basically c1 vs c2
-	- output a cost heatmap
-
-- redo figures
+ redo figures
 
 SOCIAL DISTANCING
 - beta value as polynomial
