--- a/Notes/todo.txt
+++ b/Notes/todo.txt
@@ -1,9 +1,26 @@
- redo figures
-
 SOCIAL DISTANCING
 - beta value as polynomial
 	- lets beta value change over time
 - force beta to be positive max(polynomial, 0)
+- define beta_I to put it in a different function
+- quadratic, x^3, logistic, nu*I 
+- betahat vs alpha, fix alpha at several values
+- switch to maybe a function of death rate, use the polynomial to see the relation
+- bi_0 * (dD/dt)^alpha
+- exponential: bI decreases exponentially as the death rate increases
+- compare different functions of beta, see what curve fit values match for the parameters
+- from wolbachia paper: linear, logistic, exponential functions (steal)
+
+TOTAL CASES
+- run with bi fixed, unfixed, see what c effects are
+
+- run cost heatmap with values of c>1 again
+
+- fix b_A = .1*bI, fit for k vs c2 (presymptomatic)
+
+- markov-chain monte carlo
+
+wednesday at 4pm
 
 ---
 gamma vs nu
