--- a/Notes/todo.txt
+++ b/Notes/todo.txt
@@ -1,23 +1,33 @@
-TODO
-- switch over to presymtomatic (c2) paradigm (bI*(.4 through .6)=bA)
-    - k (.15 through .7), use .5 for now
+**TODO**
 
-- divide every cost value in a cost function heatmap by the lowest of the values, letting us do comparisons
+investigate the small timeframe
+    - at the 4 corner parameters, look at the alpha and beta values for each
+    - pull a k and c combination, see what happens to beta (timeseries)
+    - check out the # of symptomatic infections instead of death rate for the equation, see what happens
 
-- check fit for richmond in new data
-- extend data out and see what the time series looks like
 - get R0 and plot it on a time series
     - compare to initial R0 estimate (without social distancing)
     - plot time series
 - look at other counties, see what time series looks like
+- other datasets: muscokogee, georgia (columbus) | jackson, missisipi
 
-- other methods of talking r0?
-    - non-immunity granting diseases, how do they calculate r0
-    - "waning immunity"
-- testing rate problems? 
 
+**NOTES**
+- very good fit for richmond
+- weird data for philly
+- need the original r0 formula so we can rewrite it for the presymptomatic version
+
+**DONE**
+- changed sigma, recovery values based off the eikenberry mask paper
+- divide every cost value in a cost function heatmap by the lowest of the values, letting us do comparisons
+- switch over to presymtomatic (c2) paradigm (bI*(.4 through .6)=bA)
+    - k (.15 through .7), use .5 for now
+- extend data out and see what the time series looks like
+- check fit for richmond in new data
 
 ---
+POSSIBLE BIG QUESTION: how do we deal with r0 when we might be making things worse?
+
 ESTIMATING R-EFFECTIVE
 - r_effective = r0 under control measures
 - in terms of different cities
@@ -25,9 +35,9 @@ ESTIMATING R-EFFECTIVE
 infectious immigration rate?
 
 hospitalized class?
---
 
-curve_fit figure
-cost heatmap
-BI_vs_c r0 heatmap
-r0 deriv plots
+- other methods of talking r0?
+    - non-immunity granting diseases, how do they calculate r0
+    - "waning immunity"
+- testing rate problems? 
+--
